--- a/FillForm.csproj
+++ b/FillForm.csproj
@@ -57,6 +57,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicantStudent.cs" />
+    <Compile Include="Classroom.cs" />
+    <Compile Include="ClassroomOperations.cs" />
     <Compile Include="DownloadImage.cs" />
     <Compile Include="FileDownloader.cs" />
     <Compile Include="FillForm.cs" />
